--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,18 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.png">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="manifest" href="manifest.json">
+  <meta name="theme-color" content="#eb5a57">
+  <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-iphone.png"/>
+  <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/apple-touch-icon-iphone.png"/>
+  <link rel="apple-touch-icon" sizes="167x167" href="/assets/icons/apple-touch-icon-ipad-retina.png"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon-iphone-retina.png"/>
 </head>
 <body>
   <tde-root></tde-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
