unit tests, pwa, ssr, and more love

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,12 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Search for users on GitHub">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#eb5a57">
+  <meta name="theme-color" content="#e84d4a">
   <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-iphone.png"/>
   <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/apple-touch-icon-iphone.png"/>
   <link rel="apple-touch-icon" sizes="167x167" href="/assets/icons/apple-touch-icon-ipad-retina.png"/>
