--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#e84d4a">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  
   <link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon-iphone.png"/>
   <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/apple-touch-icon-iphone.png"/>
   <link rel="apple-touch-icon" sizes="167x167" href="/assets/icons/apple-touch-icon-ipad-retina.png"/>
